# aruba_find_rogues

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  index.html  pyproject.toml  requirements.txt  ssids.yaml
find_rogues/: app.py  mailer.py  savedata.py
templates/: rogues_found.html.jinja2  rogues_only.html.jinja2
tests/: test_find_rogues.py
